--- a/chapter2.tex
+++ b/chapter2.tex
@@ -64,8 +64,9 @@ There are several techniques employed by businesses to analyze and display data.
 
 \section{Text analytics}
 In a paper titled ``When machines read the news``~\shortcite{gross2011machines}, the authors have used text mining to derive the relation between scrip news and intra-day stock trading. They try to relate the stock price fluctuations and liquidity, to the unscheduled news flash. The researchers used Reuter`s NewScope is an news engine which classifies stock/company related news into positive, negative and neutral segments. The techniques used was VAR model known as vector autoregressive model. This model is used for multivariate time series. 
-The data was sourced from Reuter`s NewsScope sentiment engine. It contains around 29,500 records of news headlines in the period of 1 year from the month of July 2007 to June 2008. Each news item has 3 attributes of sentiment, relevance and novelty. 40 stocks listed on the London stock exchange were selected for analysis. These are actively traded on the exchange and thus a dynamic market sentiment and frequent news coverage. These stocks cover about 70\% of the FTSE100 market capitalization. 
 
+The data was sourced from Reuter`s NewsScope sentiment engine. It contains around 29,500 records of news headlines in the period of 1 year from the month of July 2007 to June 2008. Each news item has 3 attributes of sentiment, relevance and novelty. 40 stocks listed on the London stock exchange were selected for analysis. These are actively traded on the exchange and thus a dynamic market sentiment and frequent news coverage. These stocks cover about 70\% of the FTSE100 market capitalization. 
+According to the data analysis it was found that high frequency trading activity reacts positively to company specific news marked as relevant.
 
 \section{Location analytics}
 
