--- a/chapter2.tex
+++ b/chapter2.tex
@@ -55,12 +55,12 @@ There are several techniques employed by businesses to analyze and display data.
 	\item Datawarehouse
 	\item Graphical views
 	\item Performance dashboard and KPI's
+	\item Social media analysis
+	\item Text analysis
 \end{enumerate}
 
 \section{Social media analytics}
-
-\section{Log analytics}
-
+In a paper titled ``Social media big data and capital markets—An overview``~\shortcite{bukovina2016social}, the researchers have studied the behavior of relationship between social media and the capital markets. The study relates to as behavioral finance. 
 
 \section{Text analytics}
 In a paper titled ``When machines read the news``~\shortcite{gross2011machines}, the authors have used text mining to derive the relation between scrip news and intra-day stock trading. They try to relate the stock price fluctuations and liquidity, to the unscheduled news flash. The researchers used Reuter`s NewScope is an news engine which classifies stock/company related news into positive, negative and neutral segments. The techniques used was VAR model known as vector autoregressive model. This model is used for multivariate time series. 
@@ -69,6 +69,7 @@ The data was sourced from Reuter`s NewsScope sentiment engine. It contains aroun
 According to the data analysis it was found that high frequency trading activity reacts positively to company specific news marked as relevant.
 
 \section{Location analytics}
+Valuation of goods and products varies from place to place. A certain item could be priced higher in a remote location compared to a normative value when sold in urban setting.
 
 
 
@@ -100,7 +101,7 @@ There are many techniques to modeling predictive analytics
 	\item Regession methods
 	\item Classification methods
 	\item Association rules
-\end{enumerate}e)
+\end{enumerate}
 
 %
 %
