--- a/references.bib
+++ b/references.bib
@@ -116,3 +116,14 @@
 	year={2011},
 	publisher={Elsevier}
 }
+
+
+@article{bukovina2016social,
+	title={Social media big data and capital markets—An overview},
+	author={Bukovina, Jaroslav},
+	journal={Journal of Behavioral and Experimental Finance},
+	volume={11},
+	pages={18--26},
+	year={2016},
+	publisher={Elsevier}
+}
