Location analytics done

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -69,9 +69,22 @@ The data was sourced from Reuter`s NewsScope sentiment engine. It contains aroun
 According to the data analysis it was found that high frequency trading activity reacts positively to company specific news marked as relevant.
 
 \section{Location analytics}
-Valuation of goods and products varies from place to place. A certain item could be priced higher in a remote location compared to a normative value when sold in urban setting.
-
-
+Valuation of goods and products varies from place to place. A certain item could be priced higher in a remote location compared to a normative value when sold in urban store.
+Location analytics is suitable for such marketers to price products according to demand and location. Improper valuation may decrease demand and eventually lead to unprofitable business. For example a bottle of water could cost 10 bucks in a city store, but could be priced about 5 times as high in an airport terminal. 
+A research study published in the journal ``Procedia Economics and Finance``, describes the real estate valuations in Romania~\shortcite{droj2015usage}. It compares the evaluation of  studies the economic effects of using Location analytics and the standard practice of 
+The study incorporates the use of Cadaster system for spatial analysis in the domain of GIS - Geographical information system. Cadaster system is a technique of mapping 
+The researchers used a decision support system integrated with GIS functionality. It can improves manual valuations by taking in financial analysis of the property and fusing with the physical and social environmental influences.
+Normal pricing evaluations of properties are based on Hedonic models, ie. they price the individual elements of the properties and add them up. The pricing of bedrooms, kitchen, stories, size, are summed up.
+Factors taken into valuation of real estate are as follows :
+\begin{itemize}
+	\item Physical location 
+	\item Social effects of proximity to schools, commercial spots, hospitals, nurseries, parks, criminality, recreational centers.
+	\item Infrastructure of neighborhood such as roads, public transportation facilities, water and sewage systems, communications networks and Internet facilities.
+	\item Environmental factors of air pollution, noise, industrial pollution, aircraft noise, traffic congestion etc.
+	\item Economic price trends
+	\item Legal constraints of building or modifying structures
+\end{itemize}
+In this study, researcher could automate the valuation of properties and determine the precise value. The cadaster system database is continuously updated by the administration with up to date taxation details. Hence it was possible to generate accurate valuations of living spaces.
 
 %
 %
