--- a/references.bib
+++ b/references.bib
@@ -127,3 +127,13 @@
 	year={2016},
 	publisher={Elsevier}
 }
+
+@article{droj2015usage,
+	title={Usage of location analysis software in the evaluation of commercial real estate properties},
+	author={Droj, Lauren{\c{t}}iu and Droj, Gabriela},
+	journal={Procedia Economics and Finance},
+	volume={32},
+	pages={826--832},
+	year={2015},
+	publisher={Elsevier}
+}
