should start prescriptive analystics

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -235,10 +235,12 @@ Network based graph representation is also used to link accounts and ip addresse
 \chapter{Prescriptive Techniques}
 \label{prescriptive-techniques}
 
-Prescriptive analytics is really valuable, but largely not used. According to Gartner, 13 percent of organizations are using predictive but only 3 percent are using prescriptive analytics. Where big data analytics in general sheds light on a subject, prescriptive analytics gives you a laser-like focus to answer specific questions. For example, in the health-care industry, you can better manage the patient population by using prescriptive analytics to measure the number of patients who are clinically obese, then add filters for factors like diabetes and LDL cholesterol levels to determine where to focus treatment. The same prescriptive model can be applied to almost any industry target group or problem.
+A group of data analysis techniques which can suggest possible outcomes and prescribe recommendations and suggestions.
+Prescriptive analytics is really valuable, but largely not used. According to Gartner, 13\% of organizations are using predictive but only 3\% are using prescriptive analytics. 
+Big data analytics in general sheds light on a particular subject, but on the other hand prescriptive analytics answers specific questions with laser-like focus. 
+Generally the techniques are used to optimize output, schedule and manage inventory for supply systems
 
-
-
+\section{Game theory}
 
 %
 %
@@ -247,7 +249,7 @@ Prescriptive analytics is really valuable, but largely not used. According to Ga
 
 \setlength{\footskip}{8mm}
 
-\chapter{Optimization Techniques} 
+\section{Optimization Techniques} 
 \label{optimization-techniques}
 
 
@@ -261,7 +263,7 @@ Prescriptive analytics is really valuable, but largely not used. According to Ga
 
 \setlength{\footskip}{8mm}
 
-\chapter{Visualization Techniques} 
+\section{Simulation Techniques} 
 \label{visualization-techniques}
 
 
