added summary table for literature

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -277,3 +277,24 @@ Generally the techniques are used to optimize output, schedule and manage invent
 
 \setlength{\footskip}{8mm}
 
+\chapter{Research literature summary}
+In this section a summary of all the referred articles are presented in table~\ref{my-label}.
+
+\begin{table}[H]
+	\centering
+%	\resizebox{\textwidth}{!}{%
+
+		\begin{tabular}{|l|l|l|l|l|}
+			\hline
+		\rowcolor[HTML]{000000} 
+		{\color[HTML]{FFFFFF} \textbf{Title \& Author}} & {\color[HTML]{FFFFFF} \textbf{Objective}} & {\color[HTML]{FFFFFF} \textbf{Data}} & {\color[HTML]{FFFFFF} \textbf{Results}} & {\color[HTML]{FFFFFF} \textbf{Further Study}} \\ \hline
+		title                                           & obj                                       & 20                                   & 30                                      & something                                     \\ \hline
+		title                                           & obj                                       & 20                                   & 30                                      & something                                     \\ \hline
+		title                                           & obj                                       & 20                                   & 30                                      & something                                     \\ \hline
+	\end{tabular}%
+%	}
+
+	\caption{Literature review summary table}
+	\label{my-label}
+\end{table}
+
