--- a/intro.tex
+++ b/intro.tex
@@ -65,6 +65,15 @@ Figure \ref{fig:data-analytics} is a view of the data analytics with respect to 
 \end{figure}
 \FloatBarrier
 
+Below we see a representations for the advanced analytics and business analytics~\ref{fig:rapidminer-aa}.
+
+\begin{figure}[H]
+	\includegraphics[scale=0.4]{figures/RapidMiner_AdvancedAnalytics.png}
+	\caption{Advanced analytics}
+	\label{fig:rapidminer-aa}
+\end{figure}
+
+
 \section{Objectives}
 
 The overall objective of the study report is to build an understanding of the tools and techniques of analytics used by financial analysts and institutions. This study presents a brief of the current state of affairs analytics and subsequently a study of the techniques. Also there is a demonstration of some common methods.
