--- a/thesis.tex
+++ b/thesis.tex
@@ -5,7 +5,6 @@
 %This is the Special Study Document
 %==================================================
 
-
 \documentclass[12pt,a4paper]{aitthesis}
 %\documentclass[12pt,a4paper]{article}
 
@@ -34,7 +33,8 @@
 \usepackage{dirtytalk}
 \usepackage[export]{adjustbox}
 \usepackage{enumitem}
-
+\usepackage[usenames, dvipsnames]{color}
+\usepackage[table]{xcolor}
 
 \newcommand{\oops}[1]{\bf{#1}}
 \newcommand{\ga}{\bar{\gamma}}
