--- a/chapter2.tex
+++ b/chapter2.tex
@@ -252,10 +252,6 @@ Generally the techniques are used to optimize output, schedule and manage invent
 \section{Optimization Techniques} 
 \label{optimization-techniques}
 
-
-
-
-
 %
 %
 %
@@ -266,9 +262,25 @@ Generally the techniques are used to optimize output, schedule and manage invent
 \section{Simulation Techniques} 
 \label{visualization-techniques}
 
-
-
-
+In the paper title \textit{``Monte Carlo method in risk analysis for investment projects``}~\shortcite{platon2014monte}, the authors have studied the effect of random input values to the possible outcomes for risk assessment of environmental projects. The Monte carlo model is evaluated with a random input from a normal probability distribution and the output. 
+Monte carlo simulation was formulate around 1944. The method is used to produce artificial values for a probabilistic variable by the use of:
+\begin{itemize}
+	\item a random uniformly-distributed number generator in the $ [0,1] $ interval, and
+	\item a cumulative distribution function associated with the stochastic variable
+\end{itemize} 
+There were three steps in the process of simulation. 
+\begin{enumerate}
+	\item Select an investment project
+	\item Estimate risk of crossing value or cost of project
+	\item Estimate risk of extension in implementation
+\end{enumerate}
+There exist alternate methods of plan and execution for risk mitigation :
+\begin{itemize}
+	\item risk acceptance or tolerance
+	\item monitoring of process risk
+	\item risk avoidance strategy
+	\item mitigation and outsourcing
+\end{itemize}
 
 %
 %
