--- a/references.bib
+++ b/references.bib
@@ -137,3 +137,13 @@
 	year={2015},
 	publisher={Elsevier}
 }
+
+@article{platon2014monte,
+	title={Monte Carlo method in risk analysis for investment projects},
+	author={Platon, Victor and Constantinescu, Andreea},
+	journal={Procedia Economics and Finance},
+	volume={15},
+	pages={393--400},
+	year={2014},
+	publisher={Elsevier}
+}
