--- a/chapter2.tex
+++ b/chapter2.tex
@@ -96,11 +96,13 @@ In this study, researcher could automate the valuation of properties and determi
 \chapter{Predictive Techniques} 
 \label{predictive-techniques}
 
+The basis of Predictive modeling is the use of data mining techniques to forecast future results. Data mining is the process of sorting data to find patterns or infer relationships. Thus a formulation of a statistical model with relevant variables is essential for prediction. 
+
 Predictive analytics use big data to identify past patterns to predict the future. For example, some companies are using predictive analytics for sales lead scoring. Some companies have gone one step further use predictive analytics for the entire sales process, analyzing lead source, number of communications, types of communications, social media, documents, CRM data, etc. Properly tuned predictive analytics can be used to support sales, marketing, or for other types of complex forecasts.
 
 
-The basis of Predictive modeling is the use of data mining techniques to forecast future results. Data mining is the process of sorting data to find patterns or infer relationships.
-Thus a formulation of a statistical model with relevant variables is essential for prediction. 
+
+
 ref from site (http://searchdatamanagement.techtarget.com/definition/predictive-modeling) and (http://searchsqlserver.techtarget.com/definition/data-mining)
 
 Data mining techniques are used in credit card systems to detect fraud, in loan approval systems, identifying customer types and targeting specific promotional schemes. It is used to model customer behavior and detect churning to certain financial products. Insurance schemes and bank deposits are volatile instruments due to the uncertainty of the free economy. site (https://hbr.org/1996/03/learning-from-customer-defections).
