--- a/intro.tex
+++ b/intro.tex
@@ -58,7 +58,7 @@ Shown in the table~\ref{tableDMusecase} is some business areas
 Figure \ref{fig:data-analytics} is a view of the data analytics with respect to the main fields.
 
 \begin{figure}[H]
-	\includegraphics[scale = 0.8]{figures/FlowChart.jpg}
+	\includegraphics[scale = 0.6]{figures/AnalyticsDomain.png}
 	\centering
 	\caption{Data Analytics}
 	\label{fig:data-analytics}
@@ -68,7 +68,7 @@ Figure \ref{fig:data-analytics} is a view of the data analytics with respect to 
 Below we see a representations for the advanced analytics and business analytics~\ref{fig:rapidminer-aa}.
 
 \begin{figure}[H]
-	\includegraphics[scale=0.4]{figures/RapidMiner_AdvancedAnalytics.png}
+	\includegraphics[scale=0.4]{figures/RapidMiner_AdvancedAnalytics_new.png}
 	\caption{Advanced analytics}
 	\label{fig:rapidminer-aa}
 \end{figure}
