--- a/references.bib
+++ b/references.bib
@@ -47,9 +47,9 @@
 @misc{Forbes2017,
 	Title = {Artificial Intelligence Is Becoming A Major Disruptive Force In Banks' Finance Departments | Forbes},
 	Author = {Culp, Steve},
-	howpublished = "\url{https://www.forbes.com/sites/steveculp/2017/02/15/artificial-intelligence-is-becoming-a-major-disruptive-force-in-banks-finance-departments/#39f25de14f62}",
-	Month = Feb,
-	Year = 2017,
+	howpublished = {\burl{https://www.forbes.com/sites/steveculp/2017/02/15/artificial-intelligence-is-becoming-a-major-disruptive-force-in-banks-finance-departments/#39f25de14f62}},
+	Month = {Feb},
+	Year = {2017},
 	note = {Accessed: 2017-06-27}
 	}
 
