--- a/thesis.tex
+++ b/thesis.tex
@@ -16,7 +16,7 @@
 \usepackage{verbatim}
 \usepackage{multirow}
 \usepackage{bm}
-\usepackage{url}
+%\usepackage{url}
 \usepackage{algorithm}
 \usepackage{algcompatible}
 \usepackage{placeins}
@@ -25,6 +25,8 @@
 \usepackage[caption=false,font=footnotesize]{subfig}
 \usepackage{pdflscape}
 
+\usepackage[hyphenbreaks]{breakurl}
+\usepackage[hyphens]{url}
 \usepackage{tabulary}
 \usepackage[utf8]{inputenc}
 \usepackage{longtable}
