--- a/conclusion.tex
+++ b/conclusion.tex
@@ -12,7 +12,7 @@ We hope this paper encourage new companies to apply softwares and schemes to ana
 To achieve what was not perceived, to deduce what was not understood is all made possible with data analytics. Thus it is our effort that the topics discussed in this paper would be of use to those who step into the world of Analytics without knowledge of background.
 References :
 
-\url{ http://www.cbpp.uaa.alaska.edu/afef/business_analytics.htm}
+\url{ Analytics}
 
 \section{Recommendations}
 
