--- a/references.bib
+++ b/references.bib
@@ -147,3 +147,30 @@
 	year={2014},
 	publisher={Elsevier}
 }
+
+@misc{predictiveModelling,
+	Title = {Predictive Modelling | Techtarget Network},
+	Author = {Rouse, Margaret},
+	howpublished = "\url{http://searchdatamanagement.techtarget.com/definition/predictive-modeling}",
+	Month = n.a.,
+	Year = n.a.,
+	note = {Accessed: 2017-06-20}
+}
+
+@misc{dataMining,
+	Title = {Data Mining | Techtarget Network},
+	Author = {Rouse, Margaret},
+	howpublished = "\url{http://searchsqlserver.techtarget.com/definition/data-mining}",
+	Month = n.a.,
+	Year = n.a.,
+	note = {Accessed: 2017-06-20}
+}
+
+@misc{hbrCustomerdefection,
+	Title = {Learning from Customer Defections | Harvard Business Review},
+	Author = {Reichheld, Frederick F.},
+	howpublished = "\url{https://hbr.org/1996/03/learning-from-customer-defections}",
+	Month = April,
+	Year = 1996,
+	note = {Accessed: 2017-06-15}
+}
