added to literature review table

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -43,8 +43,7 @@ Even after adopting analytics and tools, management faces challenges of educatin
 
 The sole purpose of using the methods in this category would be to describe the Hypothesis. Descriptive analytics or data mining are at the bottom of the big data value chain, but they can be valuable for uncovering patterns that offer insight. A simple example of descriptive analytics would be assessing credit risk; using past financial performance to predict a customer’s likely financial performance. Descriptive analytics can be useful in the sales cycle, for example, to categorize customers by their likely product preferences and sales cycle.
 
-To summarize data into meaningful charts and reports, for example, about budgets, sales, revenues, or cost. They allow managers to obtain standard and customized reports, and drill down into the data and to make queries to understand the impact of an advertising campaign, for example, review business performance to find problems or areas of opportunity, and identify patterns and trends in data. Typical questions that descriptive analytics help answer are: How much did we sell in each region? What was our revenue and profit last quarter? How many and what types of complaints did we resolve? Which factory has the lowest productivity? Descriptive analytics also help companies to classify customers into different segments, which enable them to develop specific marketing campaigns and advertising strategies. [1]
-
+To summarize data into meaningful charts and reports, for example, about budgets, sales, revenues, or cost. They allow managers to obtain standard and customized reports, and drill down into the data and to make queries to understand the impact of an advertising campaign, for example, review business performance to find problems or areas of opportunity, and identify patterns and trends in data. Typical questions that descriptive analytics help answer are: How much did we sell in each region? What was our revenue and profit last quarter? How many and what types of complaints did we resolve? Which factory has the lowest productivity? Descriptive analytics also help companies to classify customers into different segments, which enable them to develop specific marketing campaigns and advertising strategies.
 There are two main approaches to apply in this topic Data warehousing and Visual analytics with reporting.
 
 Descriptive analytics is very common and basic form of data mining technique to derive meaning and trend from data. Almost all of the companies in financial sector utilize the tools based on these techniques. The techniques in this are relatively basic compared with those of predictive models and prescriptive models. Institutions generally use tools which can generate reports regularly, some are printed monthly while some others are generated  as a yearly routine. Such demands for reports describe the status quo of the balance sheets, organizational debts and cash flows. Daly transactions and updates of balances are maintained in the books or accounts and reports are generated daily for accountants and auditors. Thus it is imperative that vital functions of reporting, updating and auditing are functionalities of some business analytics.
@@ -102,20 +101,22 @@ Predictive analytics use big data to identify past patterns to predict the futur
 
 Data mining techniques are used in credit card systems to detect fraud, in loan approval systems, identifying customer types and targeting specific promotional schemes. It is used to model customer behavior and detect churning to certain financial products. Insurance schemes and bank deposits are volatile instruments due to the uncertainty of the free economy~\shortcite{hbrCustomerdefection}.
 
-There are many techniques to modeling predictive analytics 
 
+%There are many techniques to modeling predictive analytics 
+%
+%
+%\begin{enumerate}
+%	\item Clustering methods
+%	\item Regession methods
+%	\item Classification methods
+%	\item Association rules
+%\end{enumerate}
 
-\begin{enumerate}
-	\item Clustering methods
-	\item Regession methods
-	\item Classification methods
-	\item Association rules
-\end{enumerate}
-
 %
 %
 %
 %
+\newpage
 \section{Geo fencing}
 Geo-fencing (or also known as Location Analytics) is the term for creating a location based analytics algorithm which can track customers in a certain area and deliver valuable marketing or services. The technology works based on geographic location services and tracks any potential clients with their mobile gps. 
 Geo fencing tools are software applications which reside on the 
@@ -320,6 +321,11 @@ In this section a summary of all the referred articles are presented in table~\r
 %		\hline
 		\hline
 		\endlastfoot
+		``Social media big data and capital markets—An overview``~\shortcite{bukovina2016social}
+		& Study capital markets relation to social media
+		& 
+		&
+		\\ \hline
 		``When machines read the news``~\shortcite{gross2011machines}
 		& $\rightarrow$ To find if trading is news dependent,
 		\newline $\rightarrow$ To find is intraday news affects high-frequency returns, volatility and liquidity, 
@@ -340,6 +346,22 @@ In this section a summary of all the referred articles are presented in table~\r
 		& obj 
 		& data 
 		& Conclusion
+		\\ \hline
+		``Deep learning in finance``~\shortcite{heaton2016deep}
+		& obj
+		& data
+		& conclusion
+		\\ \hline
+		``Big
+		data based fraud risk management at Alibaba.``~\shortcite{Chen2015}
+		& obj
+		& data
+		& conclusion
+		\\
+		“Monte Carlo method in risk analysis for investment projects“~\shortcite{platon2014monte}
+		& obj
+		& data
+		& conclusion
 		\\
 	\end{longtable}
 	
