--- a/intro.tex
+++ b/intro.tex
@@ -11,7 +11,7 @@ This paper tries to enlist most of the up-to-date techniques used by researchers
 But then there arises a question which is, why the need for data analytics ? Well, to answer that the paper proposes the literature from an article of Kdnuggets \shortcite{KDnuggets}.
 
 Data analytics is already the next big disrupter in the financial sector~\shortcite{Forbes2017}. New startups are build solutions to automate mundane manual tasks of reconciliations and consolidations. Artificial intelligence is helping companies to redesign the traditional process flows and restructure work-flows for optimization. With complex algorithms of machine learning, artificial intelligence, ``Bot's`` are designed which learn the product usage and popularity among customers. These ``Bot's`` can also interact autonomously to users and deduce patterns of interaction.
-Such an exisiting example is cited in Cnbc's article~\shortcite{BOA2016}, about Bank of America deploying ``Erica`` an digital assistant based on models of artificial intelligence.
+Such an existing example is cited in Cnbc's article~\shortcite{BOA2016}, about Bank of America deploying ``Erica`` an digital assistant based on models of artificial intelligence.
 
 According to Paul following are use cases  of data analytics :
 \begin{enumerate}
