--- a/thesis.tex
+++ b/thesis.tex
@@ -37,6 +37,9 @@
 \usepackage{enumitem}
 \usepackage[usenames, dvipsnames]{color}
 \usepackage[table]{xcolor}
+\usepackage{named}
+\usepackage[bookmarks]{hyperref}
+
 
 \newcommand{\oops}[1]{\bf{#1}}
 \newcommand{\ga}{\bar{\gamma}}
